# Motion-Capture

./: CMakeLists.txt  README.md  imgui.ini
resources/models/TestAniModel/: Standing Run Forward.dae  animation.json
resources/models/flashlight/: license.txt  scene.gltf
resources/models/lightbulb/: license.txt  scene.gltf
resources/shaders/: model.frag  model.vert  shader.frag  shader.vert
shaders/: shader.vertex
src/: Animation.hpp  Animator.hpp  App.cpp  App.hpp  Bone.hpp  BoneInfo.hpp  CameraSystem.hpp  Controller.cpp  Controller.hpp  Interface.cpp  Interface.hpp  LightingSystem.cpp  LightingSystem.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Object.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.h  Shader.hpp  Shape.hpp  Texture.cpp  Texture.hpp  Utilities.h  Utilities.hpp  Vertex.hpp  Window.cpp  Window.hpp  main.cpp  window.cpp  window.hpp
src/shaders/: shader.fragment  shader.vertex
